<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Surverior</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login here.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_viewProfile">VIEW PROFILE</string>
    <string name="name">Fullname</string>
    <string name="phone">Phone Number</string>

    <string name="hint_job">Job</string>
    <string name="hint_city">City</string>
    <string name="hint_province">Province</string>

    <string name="hint_birthdate">Birthdate</string>
    <string name="selectdate">Select Date</string>
    <string name="login_title">SURVERIOR</string>
    <string name="create_account">Create Account</string>

    <!-- ERROR MESSAGES -->
    <!-- TODO: semua teks yang akan ditampilkan di UI disimpan di string.xml -->
    <string name="error_unauthorized">Error: Email atau password salah.</string>
    <string name="hint_fullname">Full Name</string>

    <!--Keperluan eksperimen-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_timeline">Timeline</string>
    <string name="nav_item_mysurvey">My Survey</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_logout">Logout</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_timeline</item>
        <item>@string/nav_item_mysurvey</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_timeline">Timeline</string>
    <string name="title_mysurvey">My Survey</string>
    <string name="title_profile">Profile</string>

    <string-array name="range_number">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">224874591212753</string>

</resources>